--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -4,6 +4,7 @@
     <div class="ui-g">
       <div class="ui-g-12">
         <a href="javascript:;" class="navbar-toggle" (click)="exibindoMenu = !exibindoMenu"><i class="fa fa-bars"></i></a>
+        <button type="button" (click)="obterNovoAccessToken()">Obter Access Token</button>
       </div>
     </div>
   </div>
