--- a/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -1,3 +1,7 @@
+<p-dialog header="{{ idLancamento ? idLancamento + ' - Edição de' : 'Novo' }} Lançamento" [(visible)]="display">
+  <app-lancamento-cadastro [idLancamento]='idLancamento' (display)="closeDialog($event)"></app-lancamento-cadastro>
+</p-dialog>
+
 <div class="container">
   <div class="ui-g">
 
@@ -63,14 +67,18 @@
             <td class="col-valor" [style.color]="lancamento.tipo === 'DESPESA' ? 'red' : 'blue'">
               {{ lancamento.valor | number:'1.2-2' }}</td>
             <td class="col-acoes">
-              <button pButton type="button" icon="fa fa-pencil" pTooltip="Editar"
+              <button pButton type="button" pTooltip="Editar"
+              tooltipPosition="top" (click)="showDialog(lancamento.codigo)" icon="fa fa-pencil"></button>
+              <!--<button pButton type="button" icon="fa fa-pencil" pTooltip="Editar"
                 tooltipPosition="top"
-                [routerLink]="['/lancamentos', lancamento.codigo]"></button>
+                [routerLink]="['/lancamentos', lancamento.codigo]"></button>-->
 
               <button pButton type="button" class="ui-button-danger" icon="fa fa-trash"
                 pTooltip="Excluir" tooltipPosition="top"
                 (click)="confirmarExclusao(lancamento)"
                 [disabled]="!auth.temPermissao('ROLE_REMOVER_LANCAMENTO')"></button>
+
+              
             </td>
           </tr>
         </ng-template>
@@ -86,7 +94,8 @@
     </div>
 
     <div class="ui-g-12">
-      <a pButton label="Novo Lançamento" routerLink="/lancamentos/novo"></a>
+      <a pButton label="Novo Lançamento" (click)="showDialog(null)"></a>
+      <!--<a pButton label="Novo Lançamento" routerLink="/lancamentos/novo"></a>-->
     </div>
 
   </div>
